# ods-nlp

./: .env.template  README.md  pyproject.toml  rcv1_baseline.ipynb
experiments/: EDA.ipynb  albert-finetuned.ipynb  baseline.ipynb  baseline_advanced.ipynb  baseline_advanced_ensembles.ipynb  deberta-v3-base-imdb.ipynb  deberta-v3-base.ipynb  distilbert_finetuned.ipynb  distilbert_pretrained.ipynb  distilbert_pretrained_amazon.ipynb  distilbert_pretrained_sst.ipynb  eda.ipynb  electra-finetuned.ipynb  mobile-bert-finetuned.ipynb  rcv1_baseline.ipynb  xml-bert-finetuned.ipynb
src/models/: debertaV3.py
src/scripts/: synthetic_data_annotator.py
