[tool.poetry]
name = "ods-nlp"
version = "0.1.0"
description = ""
authors = ["Egor Bodrov", "Gleb Onore", "Evgeniy Dubskiy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.25"
langchain-openai = "^0.3.18"
pydantic = "^2.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
